# scrying

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: test-linux.yml  test-mac.yml
demo-linux/: Cargo.toml
demo-linux/src/: main.rs
demo-linux6/: Cargo.toml
demo-linux6/src/: main.rs
demo-mac/: Cargo.toml  README.md
demo-mac/src/: main.rs  render.rs
demo-scrying-winit/: Cargo.toml  README.md
demo-scrying-winit/src/: main.rs
demo-win/: Cargo.toml  README.md
demo-win/src/: gpu.rs  main.rs  multi_pane.rs  probe.rs  renderer.rs  waits.rs
demo-win/src/smokes/: browser.rs  capture.rs  composition_focus_hwnd.rs  input.rs  mod.rs  network.rs  profile.rs  window_to_visual.rs
demo-wry-winit/: Cargo.toml  README.md
demo-wry-winit/src/: main.rs
design_docs/: 2026-05-07_platform_ceilings.md  2026-05-09_browser_parity_checklist.md  2026-05-09_spi_evaluation.md  2026-05-11_windows_webview2_target.md  2026-05-12_windows_decomposition_plan.md  2026-05-14_linux_webkitgtk_phase_2a.md  2026-05-15_phase4_strategy.md  2026-05-20_phase4b_wpe_bindings_decision.md
scripts/: test-linux.sh  test-mac.sh
scrying/: Cargo.toml  README.md
scrying/src/: lib.rs  webkitgtk_producer.rs  webview2_composition_producer.rs  windows_capture.rs  wkwebview_producer.rs  wpe_producer.rs
scrying/src/native_frame/: dmabuf.rs  error.rs  metal.rs  mod.rs  sync.rs  sync_dx12.rs  sync_metal.rs
scrying/src/webkit6_producer/: capture.rs  config.rs  helpers.rs  mod.rs  navigation.rs  producer.rs  trait_impl.rs
scrying/src/webkitgtk_producer/: capture.rs  config.rs  cookies.rs  cursor.rs  downloads.rs  helpers.rs  ime.rs  input.rs  input_native.rs  mod.rs  navigation.rs  producer.rs  scheme_handler.rs  script_message.rs  trait_impl.rs
scrying/src/webview2_composition_producer/: auth_permissions.rs  browser.rs  capture.rs  cookies.rs  downloads.rs  input.rs  navigation.rs  resources.rs  settings.rs  setup.rs  teardown.rs
scrying/src/wkwebview_producer/: api.rs  config.rs  cookie_observer.rs  cookies.rs  download_handler.rs  helpers.rs  input.rs  mod.rs  nav_delegate.rs  producer.rs  scheme_handler.rs  script_message.rs  snapshots.rs  title_observer.rs  trait_impl.rs  ui_delegate.rs
scrying/src/wkwebview_producer/capture/: async_start.rs  blocking.rs  mod.rs
scrying/tests/: dmabuf_roundtrip.rs
wry-scry/: Cargo.toml  README.md
wry-scry/src/: webkitgtk_producer.rs  wkwebview_producer.rs
