[package]
name = "demo-scrying-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal winit + wgpu host probe for scrying"

[dependencies]
pollster = "0.4.0"
wgpu = { workspace = true, features = ["metal"] }
winit.workspace = true
scrying = { path = "../scrying" }
