[package]
name = "demo-win"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows WebView2 composition runtime probe for scrying"

[dependencies]
pollster = "0.4.0"
wgpu = { workspace = true, features = ["metal"] }
winit.workspace = true
scrying = { path = "../scrying" }

[target.'cfg(windows)'.dependencies]
raw-window-handle.workspace = true
webview2-com = "0.39.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
	"Foundation",
	"System",
	"UI",
	"UI_Composition",
	"UI_Composition_Core",
	"UI_Composition_Desktop",
	"Win32_Foundation",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Memory",
	"Win32_System_WinRT",
	"Win32_System_WinRT_Composition",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
]
