[package]
name = "demo-wry-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal winit + wgpu host probe for scrying"

[dependencies]
pollster = "0.4.0"
raw-window-handle = "0.6"
webview2-com = "0.39.1"
wgpu = { version = "29.0.1", features = ["metal"] }
wgpu-native-texture-interop = { path = "../../wgpu-graft/wgpu-native-texture-interop", default-features = false }
winit = "0.30.12"
windows-numerics = "0.3"
wry = "0.55.0"
scrying = { path = "../scrying" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
	"Foundation",
	"System",
	"UI",
	"UI_Composition",
	"UI_Composition_Core",
	"UI_Composition_Desktop",
	"Win32_Foundation",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Memory",
	"Win32_System_WinRT",
	"Win32_System_WinRT_Composition",
	"Win32_UI_WindowsAndMessaging",
]
