[package]
name = "scrying"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mark-ik/scrying"
description = "Capability-driven system-webview frame adapter — scry into WebView2/WKWebView/WebKitGTK and produce wgpu-importable frames"

[dependencies]
dpi = "0.1.2"
image = "0.25"
thiserror = "2.0.17"
wgpu = { version = "29.0.1", features = ["metal"] }
wgpu-hal = "29.0"

[target.'cfg(target_os = "linux")'.dependencies]
# WebKitGTK Rust bindings (Tauri-maintained line, links against
# libwebkitgtk-4.1).
#
# System packages required at build time (one-time apt install):
#   sudo apt install -y libwebkit2gtk-4.1-dev libgtk-3-dev
# Plus pkg-config and build-essential (usually already present).
#
# `v2_40` selects the feature gate for the symbols available in
# libwebkit2gtk-4.1 ≥ 2.40 (Ubuntu 24.04 LTS ships 2.44, so this is
# the safe baseline). Bump if newer APIs are needed.
webkit2gtk = { version = "2.0", features = ["v2_40"] }
gtk = "0.18"
gdk = "0.18"
glib = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
# Single objc2 0.6.x line. Default features kept on all of these — slim
# them once we know exactly what symbols the WKWebView producer + SCK
# capture pipeline pulls. wgpu-hal 29's `metal::Device::texture_from_raw`
# takes `Retained<ProtocolObject<dyn MTLTexture>>` directly, so the
# interop path uses `objc2_metal` rather than the legacy `metal` /
# `foreign-types-shared` crates. The objc2-* crates cover producer-side
# WKWebView, ScreenCaptureKit, and IOSurface plumbing.
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-web-kit = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["objc2-io-surface"] }
objc2-io-surface = "0.3.2"
objc2-metal = { version = "0.3.2", features = [
    "MTLAllocation",
    "MTLDevice",
    "MTLPixelFormat",
    "MTLResource",
    "MTLTexture",
    "objc2-io-surface",
] }
block2 = "0.6.2"
dispatch2 = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.39.1"
windows-numerics = "0.3"
windows = { version = "0.62", features = [
    "Foundation",
    "System",
    "UI",
    "UI_Composition",
    "UI_Composition_Core",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
] }
