[package]
name = "scrying"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mark-ik/wgpu-scry"
description = "Capability-driven system-webview frame adapter — scry into WebView2/WKWebView/WebKitGTK and produce wgpu-importable frames"

[features]
default = []
webkitgtk-fallback = [
    "dep:gdk",
    "dep:glib",
    "dep:gtk",
    "dep:javascriptcore",
    "dep:soup",
    "dep:webkit2gtk",
]
# Mutually exclusive with `webkitgtk-fallback` in practice (both pull
# incompatible glib / gtk crate-version trees). The producer-alias
# selection in `lib.rs` lets `webkit6` win if both are enabled, but
# expect noisier build output and a larger dependency graph.
webkit6 = ["dep:gtk4", "dep:webkit6"]

[dependencies]
dpi = "0.1.2"
image = "0.25"
# Color-space conversion math used by the WKWebView producer's
# adaptive Display-P3 / extended-linear capture path. We only pull
# in the gamut conversions; no rendering-extras features.
palette = { version = "0.7", default-features = false, features = ["std"] }
thiserror = "2.0.17"
wgpu = { version = "29.0.1", features = ["metal"] }
wgpu-hal = "29.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Phase 4a — Vulkan DMABUF import path in `native_frame::dmabuf`.
# wgpu-hal 29 pulls ash 0.38 transitively; pin to match. libc covers
# the small POSIX-fd plumbing the import needs (no other Linux deps).
# wgpu-types is needed for `wgt::TextureUses` on the wgpu-hal
# `TextureDescriptor` we build during the import.
ash = "0.38"
libc = "0.2"
wgpu-types = "29.0"
# WebKitGTK Rust bindings (Tauri-maintained line, links against
# libwebkitgtk-4.1).
#
# System packages required at build time (one-time apt install):
#   sudo apt install -y libwebkit2gtk-4.1-dev libgtk-3-dev
# Plus pkg-config and build-essential (usually already present).
#
# `v2_40` selects the feature gate for the symbols available in
# libwebkit2gtk-4.1 ≥ 2.40 (Ubuntu 24.04 LTS ships 2.44, so this is
# the safe baseline). Bump if newer APIs are needed.
webkit2gtk = { version = "2.0", features = ["v2_40"], optional = true }
gtk = { version = "0.18", optional = true }
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
# Pulls in JavaScriptCore Value introspection (`ValueExt::to_str`) so
# the JS-messaging path can extract strings out of `JavascriptResult`s
# delivered by the WebKit UserContentManager. Pinned to 1.1 to match
# webkit2gtk 2.0.2's transitive dep.
javascriptcore = { package = "javascriptcore-rs", version = "1.1", optional = true }
# libsoup 3 cookie type — the WebKit CookieManager API operates on
# `soup::Cookie` values. Pinned to 0.5 to match webkit2gtk 2.0.2's
# transitive dep.
soup = { package = "soup3", version = "0.5", optional = true }

# Modern gtk-rs GTK 4 + WebKitGTK 6.0 line for the parallel
# `webkit6_producer/` module. Pulls in glib 0.22 / gdk4 / gio 0.22 /
# soup3 0.9 / javascriptcore 1.x as transitives. System packages at
# build time:
#   sudo dnf install -y gtk4-devel webkitgtk6.0-devel
# The `v2_44` feature gate matches Fedora 44's webkitgtk6.0 2.52.3
# (≥ 2.44), opening the newer API surface (evaluate_javascript, etc.)
gtk4 = { version = "0.11", optional = true }
webkit6 = { version = "0.6", features = ["v2_44"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Single objc2 0.6.x line. Default features kept on all of these — slim
# them once we know exactly what symbols the WKWebView producer + SCK
# capture pipeline pulls. wgpu-hal 29's `metal::Device::texture_from_raw`
# takes `Retained<ProtocolObject<dyn MTLTexture>>` directly, so the
# interop path uses `objc2_metal` rather than the legacy `metal` /
# `foreign-types-shared` crates. The objc2-* crates cover producer-side
# WKWebView, ScreenCaptureKit, and IOSurface plumbing.
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-web-kit = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["objc2-io-surface"] }
objc2-io-surface = "0.3.2"
objc2-metal = { version = "0.3.2", features = [
    "MTLAllocation",
    "MTLDevice",
    "MTLEvent",
    "MTLPixelFormat",
    "MTLResource",
    "MTLTexture",
    "objc2-io-surface",
] }
block2 = "0.6.2"
dispatch2 = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.39.1"
windows-numerics = "0.3"
windows = { version = "0.62", features = [
    "Foundation",
    "System",
    "UI",
    "UI_Composition",
    "UI_Composition_Core",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
] }
